# Joy

./: .gitignore  Format.md  README.md
src/: CMakeLists.txt  main.cpp
src/Gui/: CMakeLists.txt
src/Gui/include/: Form_Arm.h  Form_Body.h  Form_ControlPanel.h  Form_Head.h  Form_Mobile.h  Form_Network.h  Form_Strategy.h  Form_Vision.h
src/Gui/include/May/: Form_May.h  Form_MayArm.h
src/Gui/include/Robot/: Form_Arm.h  Form_ForceSensor.h  Form_Head.h  Form_Mobile.h  Form_Robot.h
src/Gui/include/Scara/: Form_Scara.h  Form_ScaraArm.h  Form_VisionCar.h  Form_XYPlatform.h
src/Gui/src/: Form_Arm.cpp  Form_Body.cpp  Form_ControlPanel.cpp  Form_Head.cpp  Form_Mobile.cpp  Form_Network.cpp  Form_Strategy.cpp
src/Gui/src/May/: Form_May.cpp  Form_MayArm.cpp
src/Gui/src/Robot/: Form_Arm.cpp  Form_ForceSensor.cpp  Form_Head.cpp  Form_Mobile.cpp  Form_Robot.cpp  Form_Vision.cpp
src/Gui/src/Scara/: Form_Scara.cpp  Form_ScaraArm.cpp  Form_VisionCar.cpp  Form_XYPlatform.cpp
src/Gui/ui/: Form_Body.ui  Form_ControlPanel.ui  Form_May.ui  Form_Network.ui  Form_Robot.ui  Form_Scara.ui  Form_Stop.ui  Form_Strategy.ui  Form_Vision.ui
src/May/: CMakeLists.txt  May.cpp  May.h
src/Network/: Network.cpp  Network.h  tcpip_network.cpp  tcpip_network.h
src/Robot/: CMakeLists.txt  Robot.cpp  Robot.h
src/Robot/Arm/: SaleArmLeft.cpp  SaleArmLeft.h  SaleArmRight.cpp  SaleArmRight.h
src/Robot/Arm/BasicArm/: Arm.cpp  Arm.h  CMakeLists.txt
src/Robot/Body/: Body.cpp  Body.h  CMakeLists.txt
src/Robot/Body/Arm/: CMakeLists.txt  SaleArmLeft.cpp  SaleArmLeft.h  SaleArmRight.cpp  SaleArmRight.h
src/Robot/Body/Arm/BasicArm/: Arm.cpp  Arm.h
src/Robot/Body/HeadandLiftingPlatform/: CMakeLists.txt  HeadandLiftingPlatform.cpp  HeadandLiftingPlatform.h
src/Robot/Body/MobilePlatform/: CMakeLists.txt  MobilePlatform.cpp  MobilePlatform.h
src/Robot/Body/MobilePlatform/Steering/: Steering.cpp  Steering.h
src/Robot/Body/MobilePlatform/Wheel/: Wheel.cpp  Wheel.h
src/Robot/Body/MotorUnion/: CMakeLists.txt  MotorUnion.cpp  MotorUnion.h  main.cpp
src/Robot/Body/MotorUnion/Motor/: CMakeLists.txt  Motor.cpp  Motor.h  MotorMx.cpp  MotorPro.cpp  MotorProPlus.cpp
src/Robot/Body/MotorUnion/Motor/dynamixel/: DynamixelSDK.h
src/Robot/Body/MotorUnion/Motor/motor/: motor.cpp  motor.h
src/Robot/ForceSensor/: CMakeLists.txt  ForceSensor.cpp  ForceSensor.h  main.cpp
src/Robot/ForceSensor/py/: sub.ipynb  sub.py
src/Robot/HeadandLifting/: CMakeLists.txt  HeadandLifting.cpp  HeadandLifting.h
src/Robot/Mobile/: CMakeLists.txt  Mobile.cpp  Mobile.h
src/Robot/Mobile/Steering/: CMakeLists.txt  Steering.cpp  Steering.h
src/Robot/Mobile/Wheel/: CMakeLists.txt  Wheel.cpp  Wheel.h
src/Robot/MotorUnion/: CMakeLists.txt  MotorUnion.cpp  MotorUnion.h
src/Robot/MotorUnion/Motor/: Motor.cpp  Motor.h  MotorMx.cpp  MotorMx.h  MotorPro.cpp  MotorPro.h  MotorProPlus.cpp  MotorProPlus.h
src/Robot/MotorUnion/Motor/dynamixel/: CMakeLists.txt
src/Robot/MotorUnion/Motor/motor/: CMakeLists.txt  motor.cpp  motor.h
src/Robot/Speech/: CMakeLists.txt  Speech.cpp  Speech.h
src/Robot/Vision/: CMakeLists.txt  Vision.cpp  Vision.h
src/Robot/Vision/ImageConverter/: CMakeLists.txt  image_converter.cpp  image_converter.h
src/Robot/Vision/ImageProcessing/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h
src/Robot/Vision/MouseEvent/: CMakeLists.txt  mouse_event.cpp  mouse_event.h
src/Robot/Vision/PclConverter/: CMakeLists.txt  pcl_converter.cpp  pcl_converter.h
src/Robot/Vision/PclConverter/spec_msg/: CMakeLists.txt  package.xml
src/Robot/Vision/PclConverter/spec_msg/msg/: float32_1d.msg  float32_2d.msg  spec_points.msg
src/Scara/: CMakeLists.txt  Scara.cpp  Scara.h
src/Scara/Scara/: Scara.cpp  Scara.h
src/Scara/ScaraArm/: CMakeLists.txt  Height.txt  ScaraArm.cpp  ScaraArm.h
src/Scara/VisionCar/: CMakeLists.txt  VisionCar.cpp  VisionCar.h
src/Scara/XYPlatform/: CMakeLists.txt  XYPlatform.cpp  XYPlatform.h  XYRecord.txt
src/Scara/XY_Platform/: CMakeLists.txt  XY_PLatform.h  XY_Platform.cpp
src/Strategy/: CMakeLists.txt  Strategy.cpp  Strategy.h  name.txt
src/Strategy/Scaratest/: Scaratest.cpp  Scaratest.h
src/Strategy/Strategies/Demo_catch_YOLO/: Demo_catch_YOLO.cpp  Demo_catch_YOLO.h
src/XBoxJoystick/: CMakeLists.txt  XBoxJoystick.cpp  XBoxJoystick.h
